<resources>
    <string name="app_name">Hackathon</string>
    <string name="Login">Login</string>
    <string name="Name">Name</string>
    <string name="Password">Password</string>
    <string name="New">If New User Click Here</string>
    <string name="Register">Register</string>
    <string name="EmailId">Email Id</string>
    <string name="LogOut">Log Out</string>
    <string name="Forgot">Forget Password</string>
    <string name="Reset">Send Reset Mail</string>
    <string name="Mob">Mobile No</string>
    <array name="Topic">
        <item>Select A Topic</item>
        <item>Cloud_Computing</item>
        <item>Air_and_Water_Polution</item>
    </array>
    <array name="Air_and_Water_Polution">
        <item>Air_Polution</item>
        <item>Water_Polution</item>
        <item>Soil_Polution</item>
    </array>
    <array name="Air_Polution">
        <item>Smoke</item>
        <item>Atmosphere</item>
        <item>Contaminated</item>
        <item>Harmful</item>
        <item>Taj_Mahal</item>
    </array>
    <array name="Water_Polution">

</array>
    <array name="Soil_Polution">

    </array>

</resources>
